[gd_scene load_steps=5 format=3 uid="uid://ymf57kilpxth"]

[ext_resource type="Script" path="res://gamemodes/game_mode.gd" id="1_iv8jr"]
[ext_resource type="Texture2D" uid="uid://c3pmmr16rafep" path="res://assets/gdm_banner.jpg" id="2_iiac2"]
[ext_resource type="FontFile" uid="uid://dmccec4vuw4b5" path="res://fonts/PixelGame-R9AZe.otf" id="2_m7jn6"]

[sub_resource type="Theme" id="Theme_j5oq5"]
Button/font_sizes/font_size = 60
Button/fonts/font = ExtResource("2_m7jn6")

[node name="GameMode" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iv8jr")

[node name="background" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.643137)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -683.0
offset_top = -448.5
offset_right = 683.0
offset_bottom = 448.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_iiac2")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -154.5
offset_right = 168.0
offset_bottom = 154.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Base" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_j5oq5")
text = "Base"

[node name="Endurance" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_j5oq5")
text = "Endurance"

[node name="NuxMode" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_j5oq5")
text = "\"nux mode\""

[connection signal="pressed" from="PanelContainer/VBoxContainer/Base" to="." method="_on_base_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Endurance" to="." method="_on_endurance_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/NuxMode" to="." method="_on_nux_mode_pressed"]
